--- a/lab2/src/taranLab2.html
+++ b/lab2/src/taranLab2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>TaranLab2</title>
     <link href="taranLab2Css.css" rel="stylesheet"/>
   <style>
     .big {
