--- a/lab3/src/lab3Taran.html
+++ b/lab3/src/lab3Taran.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>TaranLab3</title>
     <link rel="stylesheet" href="lab3TaranStyle.css">
     <script rel="script" src="lab3Taran.js"></script>
 </head>
