--- a/lab1/src/taranLab1.html
+++ b/lab1/src/taranLab1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>PushkarLab</title>
+  <title>TaranLab1</title>
 </head>
 <body>
 <span>
