--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <a href="lab3/src/lab3Taran.html" target="_blank">Laba 3</a>
 <br/>
 <p> Laba 4 files: <br/>
-<a href="lab4/src/index.php" target="_blank">index.php</a> <a href="lab4/src/page2.php" target="_blank">page2.php</a> <a href="lab4/src/page3.php" target="_blank">page3.php</a>
+<a href="lab4/src/index.php" target="_blank">index.php</a><br/><a href="lab4/src/page2.php" target="_blank">page2.php</a><br/><a href="lab4/src/page3.php" target="_blank">page3.php</a>
 </p>
 <br/>
 </body>
