--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 <br/>
 <p> Laba 4 files: <br/>
 <a href="lab4/src/index.php" target="_blank">index.php</a><br/><a href="lab4/src/page2.php" target="_blank">page2.php</a><br/><a href="lab4/src/page3.php" target="_blank">page3.php</a>
+<br/>
 </p>
+<a href="BookmarkletHabrTaran.js" target="_blank">ИДЗ bookmarklet Habr</a>
 <br/>
 </body>
 </html>
