--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <a href="BookmarkletHabrTaran.js" target="_blank">ИДЗ bookmarklet Habr</a>
 <br/>
 <p> 2 semestr labs ZIP-archive <br/>
-<a href="sem2_all_labs.zip" target="_blank">All labs for 2 semester in ZIP-archive</a><br/>
+<a href="sem2_all_labs.zip" download>All labs for 2 semester in ZIP-archive</a><br/>
 </p>
 </body>
 </html>
